# aops

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/: CODEOWNERS
backend/: .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0daf3a6f346d_rename_order_to_call_order_in_chain_.py  1078288824d9_add_agents_table.py  1131167fbdbf_add_show_in_flow_to_chains.py  5313eca8aa8d_add_chains_prompts_prompt_versions.py  566bd979d884_remove_order_from_prompts.py  96c81ed8b56c_add_order_to_chain_call_logs.py  a1b2c3d4e5f6_refactor_chains_remove_prompts.py  a2b3c4d5e6f7_add_position_to_chains.py  a7ef5ba20297_add_model_pricing_table.py  a8b9c0d1e2f3_add_idx_agent_runs_agent_started_at.py  b1c2d3e4f5a6_add_message_to_chain_versions.py  b3c4d5e6f7a8_add_input_output_to_chain_call_logs.py  b5fa12101aa7_add_model_name_to_chain_call_logs.py  b80133093552_initial.py  c1d2e3f4a5b6_add_api_keys.py  c31dc371d24b_add_token_usage_columns_to_chain_call_.py  c3d4e5f6a7b8_add_covering_index_agent_runs_stats.py  c4d5e6f7a8b9_add_idx_chain_call_logs_agent_id_called_at.py  d1e2f3a4b5c6_make_persona_nullable.py  d4e5f6a7b8c9_add_agent_health_config_and_health_check_logs.py  d5e6f7a8b9c0_add_run_edges_table.py  e1f2a3b4c5d6_add_users_groups_auth.py  e5f6a7b8c9d0_fix_health_check_log_latency_ms_to_integer.py  e6f7a8b9c0d1_add_error_capture_columns.py  f1a2b3c4d5e6_add_agent_runs_chain_call_logs.py  f6a7b8c9d0e1_add_verified_fields_to_agent_health_configs.py  f7a8b9c0d1e2_add_run_error_details_table.py
backend/app/: main.py
(+140 files in other folders)
